--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.11.3",
         "compass": "^0.1.1",
         "cropperjs": "^1.6.2"
     }
